2009-10-30  Lluis Sanchez Gual  <lluis@novell.com>

	* AssemblyInfo.cs:
	* BuildVariables.cs:
	* MonoDevelop.Ide.addin.xml: Bump MD version.

2009-10-30  Mike Kestner  <mkestner@novell.com>

	* MonoDevelop.Ide.Gui.Dialogs/CustomExecutionModeDialog.cs:
	  add existing editor to dictionary instead of creating a new one.

2009-10-29  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Ide.Execution/IExecutionCommandCustomizer.cs:
	* MonoDevelop.Ide.Execution/ParameterizedExecutionHandler.cs:
	* MonoDevelop.Ide.Execution/IExecutionConfigurationEditor.cs:
	  Add some docs.

2009-10-29  Lluis Sanchez Gual  <lluis@novell.com>

	* Makefile.am:
	* MonoDevelop.Ide.csproj: Reference the mono-cairo package.

2009-10-29  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Ide.Gui/Workbench.cs: New overload for
	  OpenDocument.

2009-10-29  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Ide.Gui.Pads.ProjectPad/ProjectNodeBuilder.cs:
	  Show an error message when displaying an unknown project.

2009-10-28  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Ide.CodeTemplates/MonoDevelop-templates.xml:
	  Name the caught exception in try template.

2009-10-28  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Ide.CodeTemplates/MonoDevelop-templates.xml: Fix
	  duplicate try shortcut.

2009-10-28  Lluis Sanchez Gual  <lluis@novell.com>

	* gtk-gui/generated.cs:
	* gtk-gui/MonoDevelop.Ide.DocumentSwitcher.cs:
	* gtk-gui/MonoDevelop.Ide.SelectEncodingsDialog.cs:
	* gtk-gui/MonoDevelop.Ide.Gui.Dialogs.GoToDialog.cs:
	* gtk-gui/MonoDevelop.Ide.OverridesImplementsDialog.cs:
	* gtk-gui/MonoDevelop.Ide.Gui.Dialogs.NewFileDialog.cs:
	* gtk-gui/MonoDevelop.Ide.Gui.Dialogs.NewLayoutDialog.cs:
	* gtk-gui/MonoDevelop.Ide.Gui.Dialogs.NewProjectDialog.cs:
	* gtk-gui/MonoDevelop.Ide.FindInFiles.FindInFilesDialog.cs:
	* gtk-gui/MonoDevelop.Ide.Gui.Dialogs.TipOfTheDayWindow.cs:
	* gtk-gui/MonoDevelop.Ide.FindInFiles.SearchResultWidget.cs: